--- a/src/VueDatePicker/style/main.scss
+++ b/src/VueDatePicker/style/main.scss
@@ -28,7 +28,7 @@
   --dp-success-color-disabled: #428f59;
   --dp-icon-color: #959595;
   --dp-danger-color: #e53935;
-  --dp-marker-color: #e53935;
+  --dp-marker-color: #0047FD;
   --dp-tooltip-color: #3e3e3e;
   --dp-highlight-color: rgb(0 92 178 / 20%);
 }
@@ -39,7 +39,7 @@
   --dp-hover-color: #f3f3f3;
   --dp-hover-text-color: #212121;
   --dp-hover-icon-color: #959595;
-  --dp-primary-color: #1976d2;
+  --dp-primary-color: #0047FD;
   --dp-primary-disabled-color: #6bacea;
   --dp-primary-text-color: #f8f5f5;
   --dp-secondary-color: #c0c4cc;
@@ -53,10 +53,11 @@
   --dp-success-color-disabled: #a3d9b1;
   --dp-icon-color: #959595;
   --dp-danger-color: #ff6f60;
-  --dp-marker-color: #ff6f60;
+  --dp-marker-color: #0047FD;
   --dp-tooltip-color: #fafafa;
   --dp-disabled-color-text: #8e8e8e;
   --dp-highlight-color: rgb(25 118 210 / 10%);
+  --dp-active-color: #E6EDFE;
 }
 
 .dp__main {
