--- a/src/VueDatePicker/style/components/_TimeInput.scss
+++ b/src/VueDatePicker/style/components/_TimeInput.scss
@@ -35,7 +35,7 @@
 
 .dp__time_display {
   cursor: pointer;
-  color: var(--dp-text-color);
+  color: var(--dp-primary-color);
   border-radius: $dp__border_radius;
   display: flex;
   align-items: center;
