--- a/src/VueDatePicker/style/components/_MonthYearInput.scss
+++ b/src/VueDatePicker/style/components/_MonthYearInput.scss
@@ -1,7 +1,8 @@
 .dp__month_year_row {
   display: flex;
   align-items: center;
-  height: $dp__month_year_row_height;
+  /* height: $dp__month_year_row_height; */
+  margin: 16px 0px 10px 0px;
   color: var(--dp-text-color);
   box-sizing: border-box;
 }
@@ -44,6 +45,8 @@
 
 .dp__month_year_select {
   width: 50%;
+  font-size: 16px;
+  font-weight: 500;
   text-align: center;
   cursor: pointer;
   height: $dp__month_year_row_height;
