--- a/src/VueDatePicker/style/components/_DatepickerInput.scss
+++ b/src/VueDatePicker/style/components/_DatepickerInput.scss
@@ -17,6 +17,7 @@
   outline: none;
   transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
   width: 100%;
+  height: 36px;
   font-size: $dp__font_size;
   line-height: $dp__font_size * 1.2;
   padding: $dp__input_padding;
