--- a/src/VueDatePicker/style/components/_MonthYearInput.scss
+++ b/src/VueDatePicker/style/components/_MonthYearInput.scss
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+.dp__month_year_wrap {
+  display: flex;
+  width: 100%;
+}
+
 .dp__inner_nav {
   display: flex;
   align-items: center;
