--- a/src/VueDatePicker/style/main.scss
+++ b/src/VueDatePicker/style/main.scss
@@ -64,6 +64,7 @@
   font-family: $dp__font_family;
   user-select: none;
   box-sizing: border-box;
+  position: relative;
 }
 
 .dp__pointer {
@@ -147,14 +148,14 @@
   transform: translateX($dp__transition_length);
 }
 
-.dp-menu-appear-enter-active,
+/* .dp-menu-appear-enter-active,
 .dp-menu-appear-leave-active,
 .dp-slide-up-enter-active,
 .dp-slide-up-leave-active,
 .dp-slide-down-enter-active,
 .dp-slide-down-leave-active {
   transition: all 0.1s ease-out;
-}
+} */
 
 .dp-slide-down-leave-to,
 .dp-slide-up-enter-from {
