--- a/src/VueDatePicker/style/main.scss
+++ b/src/VueDatePicker/style/main.scss
@@ -148,14 +148,13 @@
   transform: translateX($dp__transition_length);
 }
 
-/* .dp-menu-appear-enter-active,
-.dp-menu-appear-leave-active,
+
 .dp-slide-up-enter-active,
 .dp-slide-up-leave-active,
 .dp-slide-down-enter-active,
 .dp-slide-down-leave-active {
   transition: all 0.1s ease-out;
-} */
+}
 
 .dp-slide-down-leave-to,
 .dp-slide-up-enter-from {
