--- a/src/VueDatePicker/style/main.scss
+++ b/src/VueDatePicker/style/main.scss
@@ -27,7 +27,7 @@
   --dp-success-color: #00701a;
   --dp-success-color-disabled: #428f59;
   --dp-icon-color: #959595;
-  --dp-danger-color: #e53935;
+  --dp-danger-color: #CA0813;
   --dp-marker-color: #0047FD;
   --dp-tooltip-color: #3e3e3e;
   --dp-highlight-color: rgb(0 92 178 / 20%);
