--- a/src/VueDatePicker/style/main.scss
+++ b/src/VueDatePicker/style/main.scss
@@ -52,7 +52,7 @@
   --dp-success-color: #76d275;
   --dp-success-color-disabled: #a3d9b1;
   --dp-icon-color: #959595;
-  --dp-danger-color: #ff6f60;
+  --dp-danger-color: #CA0813;
   --dp-marker-color: #0047FD;
   --dp-tooltip-color: #fafafa;
   --dp-disabled-color-text: #8e8e8e;
